added cut and serve - last direction

--- a/recipe.html
+++ b/recipe.html
@@ -25,6 +25,7 @@
 	<li>In a medium bowl, beat cream with vanilla until stiff peaks form. Whisk mascarpone into yolk mixture until smooth.</li>
 	<li>In a small bowl, combine coffee and rum. Split ladyfingers in half lengthwise and drizzle with coffee mixture.</li>
 	<li>Arrange half of soaked ladyfingers in bottom of a 7x11 inch dish. Spread half of mascarpone mixture over ladyfingers, then half of whipped cream over that. Repeat layers and sprinkle with cocoa. Cover and refrigerate 4 to 6 hours, until set</li>
+	<li> Cut and serve on a dish, add chocolate shavings by running a peeler over a chocolate bar. </li>
 	</ol>
 </body>
 </html>
